--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
     "hardhat": "^2.8.3",
-    "solidity-coverage": "^0.7.18"
+    "solidity-coverage": "^0.7.18",
+    "ansi-regex": ">=5.0.1"
   }
 }
